# pop

./: LICENSE  MANIFEST.in  POP.py  README.md  comparison.ipynb  example.ipynb  example_pip.ipynb  pyproject.toml
pop_inv/: POP.py  __init__.py
